solc_ossfuzz_seed_corpus/test_sol/test_5accdd5e73c82ad6f0608011073e91a72d2998e1230d77b810b7bf8e4469510a_11dae109c24ad3363cdc64bf0c070d3c28e9b4c9_sol.sol
==== Source:  ====

==== Source: su0.sol ====
int248 constant cons0 = 226156424291633194186662080095093570025917938800079226639565593765455331327;
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
contract C0 {
  fallback() external virtual  
  {
    bool[6][][][][5][4] storage l0;
    (bool l1, bytes memory l2) = address(this).call(bytes("00000000000000000000000000000000ffffffffffffffffffffffffffffffff"));
    (l0[uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935)], l0[uint256(((~(l0.length)) / uint256(43487970621005735541527623760933728068677225561268397511736278205164508195248)))], l0[uint256((l0.length / ((~(l2.length)) % (uint256(0) % uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935)))))]) = ([new bool[6][][][](3), new bool[6][][][](3), new bool[6][][][](3), new bool[6][][][](3), new bool[6][][][](3)], [new bool[6][][][](3), new bool[6][][][](3), new bool[6][][][](3), new bool[6][][][](3), new bool[6][][][](3)], [new bool[6][][][](3), new bool[6][][][](3), new bool[6][][][](3), new bool[6][][][](3), new bool[6][][][](3)]);
  }
  modifier m0(string memory i0,int168[][] memory i1) virtual
  {
    bool l0 = false;
    unchecked {
      (bool l1, bytes memory l2) = address(this).call(bytes("1b095d77656b4b1aefb682c95447edffffffffffff"));
      uint216 l3 = (true ? ((((uint216(53157581442968156474311757603118533956226577037719467085863815649) << uint24(uint24(0))) + uint216(0)) ^ uint216(105312291668557186697918027683670432318895095400549111254310977535)) % uint216(105312291668557186697918027683670432318895095400549111254310977535)) : uint216(0));
      int120 l4 = int120((((int224(13479973333575319897333507543509815336818572211270286240551805124607) - (int224(13479973333575319897333507543509815336818572211270286240551805124607) - int224(-6692129937388766194158386304111133738638282889860778772894427801052))) ^ int224(0)) & int224(0)));
      (bool l5, bytes memory l6) = address(this).call(abi.encode((((int32(-2079222586) + int32(uint32(0))) & int32(-806333757)) | int32(0)), uint88(0)));
    }
    _;
  }
  function f1() public  m0(string("00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000"),new int168[][](8)) payable
  {
    int104[2] storage l0;
  }
  uint256  public s0 = uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935);
  int144  public s1;
  constructor(int144 i0)   {
    s1 -= int144(0);
    unchecked {
      uint256  l0 = s0;
      uint256  l1 = l0;
      assert(l1 == s0);
      int144  l2 = s1;
      int144  l3 = l2;
      assert(l3 == s1);
      int144  l4 = s1;
      int144  l5 = l4;
      assert(l5 == s1);
    }
  }
}
pragma solidity >= 0.0.0;
// ----
// TypeError 3464: (su1.sol:219-221): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
// TypeError 3464: (su1.sol:312-314): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
// TypeError 3464: (su1.sol:327-329): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
// TypeError 3464: (su1.sol:432-434): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
// TypeError 3464: (su1.sol:444-446): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
